kubernetes/development/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vv-middleware-api
  annotations:
    cloud.google.com/neg: '{"ingress": false}'
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      protocol: TCP
      name: api
    - port: 1880
      protocol: TCP
      name: red
  selector:
    app: vv-middleware-api
